# umlang

./: .gitignore  CLAUDE.md  Dockerfile.arm64  Dockerfile.x86_64  README.md
assembler/crude_asm/: main.c  maketest  maketest.sh
docs/spec/: um-spec.txt
experiments/arm-exp/: README  main
experiments/x86-exp/: utility.h
runtimes/OptimizedUM/: CMakeLists.txt  README.md
runtimes/OptimizedUM/src/: compiler.h  main.cpp
runtimes/UM-JIT/darwin-arm64/jit/: Makefile  jit  utility.h  virt.h
runtimes/UM-JIT/linux-arm64-container/: Dockerfile
runtimes/UM-JIT/linux-arm64-container/emulator/: Makefile  mod_emulator.c  um
runtimes/UM-JIT/linux-arm64-container/exp/: asm.txt  main.c  utility.S  utility.h
runtimes/UM-JIT/linux-x86-64-container/: Dockerfile
runtimes/Virt32/: Dockerfile  README.md
runtimes/Virt32/compact/: virt.c
runtimes/Virt32/media/: Original_Project_Proposal.md
runtimes/Virt32/um/: Makefile  emulator.c
runtimes/Virt32/virt/: Makefile  driver.h  emulator.c  mem_state.h  stack.h
runtimes/Virt32/virt/liam_umasm/: Makefile  (+4 more)
runtimes/interp/: README  virt.h
runtimes/interpreter/: Makefile  mod_emulator.c  um
runtimes/ir/: .gitignore  README.md
runtimes/ir/src/: program_loader.cpp
runtimes/jit/: .gitignore  README.md
runtimes/jit/darwin-arm64/: Makefile  jit  jit.c  umasm  utility.S
runtimes/jit/linux-arm64/: Makefile  jit  jit.cpp  utility.S
runtimes/jit/linux-x86_64/: Makefile  jit  jit.c  utility.S  virt.c
runtimes/optimized-jit/: CMakeLists.txt
runtimes/optimized-jit/src/: compiler.cpp  compiler.h  compiler.hpp  main.cpp  program_loader.cpp  program_loader.h
runtimes/original-interpreter/: Makefile  um
runtimes/tools/virt32/: .gitignore  README.md
runtimes/virt/: Makefile  virt.c  virt.h
tests/: runtimes.json  test_cases.json  test_runner.py
umasm/: README.md  test.sh
umasm/asm/: example.txt  example.umlang  load.umlang  tuffer.umlang
umasm/binary/: em_sandmark.umz  map.um  unmap.um  unrolled_sandmark.um
umasm/tests/: condmove_no.um  simple_div.um  tuffer.um
umasm/tools/: maketest.sh
umasm/umbinary/: 2map.um  bigadd.um  echo.um  em_midmark.um  try_map.um  unrolled_tuffer.um
umasm/unrolled/: unrolled_sandmark.txt
(+34 files in other folders)
